<resources>
    <string name="app_name">PopLibraries_HW</string>
    <string name="counter_one">Счетчик 1</string>
    <string name="counter_two">Счетчик 2</string>
    <string name="counter_three">Счетчик 3</string>
    <string name="login_text">Login</string>
    <string name="id_text">id</string>
    <string name="repo_text">repo</string>
    <string name="repos_text">User\'s repos:</string>
    <string name="repo_name_text">Name</string>
    <string name="forks_count_text">Forks count</string>
    <string name="repo_id_text">id</string>
    <string name="repo_description_text">Description</string>
</resources>