<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/repo_id_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repo_id_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/repo_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="5dp"
        android:paddingLeft="5dp"
        app:layout_constraintStart_toEndOf="@id/repo_id_text"
        app:layout_constraintTop_toTopOf="@id/repo_id_text" />

    <TextView
        android:id="@+id/repo_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repo_name_text"
        app:layout_constraintStart_toEndOf="@id/repo_id"
        app:layout_constraintTop_toTopOf="@id/repo_id" />

    <TextView
        android:id="@+id/repo_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="5dp"
        android:paddingLeft="5dp"
        app:layout_constraintStart_toEndOf="@id/repo_name_text"
        app:layout_constraintTop_toTopOf="@id/repo_name_text" />

    <TextView
        android:id="@+id/repo_description_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repo_description_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/repo_id" />

    <TextView
        android:id="@+id/repo_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="5dp"
        android:paddingLeft="5dp"
        app:layout_constraintStart_toEndOf="@id/repo_description_text"
        app:layout_constraintTop_toTopOf="@id/repo_description_text" />
    <TextView
        android:id="@+id/forks_count_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forks_count_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/repo_description" />
    <TextView
        android:id="@+id/forks_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="5dp"
        android:paddingLeft="5dp"
        app:layout_constraintStart_toEndOf="@id/forks_count_text"
        app:layout_constraintTop_toTopOf="@id/forks_count_text" />
</androidx.constraintlayout.widget.ConstraintLayout>

